--- a/public/PluginManifest.json
+++ b/public/PluginManifest.json
@@ -1,10 +1,10 @@
 ﻿{
     // ID must be unique on the gallery
-    "Id": "PluginTemplate",
-    "Name": "An empty plugin",
+    "Id": "Mailer",
+    "Name": "Export a mail list",
     "Author" :  "Voter-Science",
-    "Website" :  "https://github.com/Voter-Science/TRC-API-Samples",
-    "Description": "An empty plugin that just gets the initial login and shows basic sheet properties.",        
+    "Website" :  "https://github.com/Voter-Science/Mailer",
+    "Description": "Export a mail list that groups per-household.",        
     "Version": "1.0.0", // User SemVer
-    "Tags": [ "demo"  ]
+    "Tags": [ "mailer", "export"  ]
 }
